Fix bio button wrapping

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -54,6 +54,7 @@
   & fieldset {
     all: unset;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 1rem;
   }
